fix: added icons to carousal's buttons to make them more visible.

--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -4,3 +4,12 @@
   font-style: italic;
   color: goldenrod;
 }
+.carousel-control-prev-icon {
+  background-image: url("../../assets/previous.svg");
+  transform: scale(1.5);
+}
+
+.carousel-control-next-icon {
+  background-image: url("../../assets/next.svg");
+  transform: scale(1.5);
+}
